force-app/main/default/objects/Contact/fields/Accepted_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>