force-app/main/default/objects/Contact/fields/Account_Source_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Group_ID__c</fullName>
    <formula>IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;E&amp;V Friends&quot;)), &quot;CnsR7kA&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;E&amp;V Ambassadors&quot;)), &quot;CnsRamb&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;E&amp;V SM Employees&quot;)), &quot;CnsRemp&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;E&amp;V SM Investor&quot;)), &quot;DinNObB&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;Finleap&quot;)), &quot;n7zUWWA&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;Finleap Connect&quot;)), &quot;4LTqdxA&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;Friends &amp; Family&quot;)), &quot;aZK74kA&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Alpha Test&quot;), ISPICKVAL(Account.Account_Source_Detail__c, &quot;Solarisbank&quot;)), &quot;sbUwWAA&quot;,
IF(AND(ISPICKVAL(Account.AccountSource, &quot;Website&quot;)), &quot;VpUr7XA&quot;,
&quot;ExpK8UA&quot;)))))))))</formula>
    <label>Account Source Group ID</label>
    <type>Text</type>
</CustomField>