force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>31-40</fullName>
            </value>
            <value>
                <fullName>41-50</fullName>
            </value>
            <value>
                <fullName>51-60</fullName>
            </value>
            <value>
                <fullName>61-70</fullName>
            </value>
            <value>
                <fullName>71-80</fullName>
            </value>
            <value>
                <fullName>81-90</fullName>
            </value>
            <value>
                <fullName>91-99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>