force-app/main/default/objects/Contact/fields/Email_Honorific__c.field-meta.xml
<CustomField>
    <fullName>Email_Honorific__c</fullName>
    <formula>IF(ISPICKVAL( Gender__c , &apos;Female&apos;) ,&apos;Sehr geehrte &apos;,&apos;Sehr geehrter&apos;)+
&apos; &apos; + 
CASE(Salutation ,
&apos;Ms&apos;, &apos;Frau&apos;,
&apos;Ms.&apos;, &apos;Frau&apos;,
&apos;Mrs.&apos;, &apos;Frau&apos;,
&apos;Mrs&apos;, &apos;Frau&apos;,
&apos;Mr&apos;, &apos;Herr&apos;,
&apos;Mr.&apos;, &apos;Herr&apos;,
&apos;Dr.&apos;, &apos;Doktor&apos;,
&apos;Dr&apos;, &apos;Doktor&apos;,
&apos;Prof&apos;, &apos;Professor&apos;,
&apos;Prof.&apos;, &apos;Professor&apos;,
&apos;&apos;) +
 &apos; &apos; +
FirstName
+ &apos; &apos; +
MiddleName
+ &apos; &apos; +
LastName</formula>
    <label>Email Honorific</label>
    <type>Text</type>
</CustomField>