force-app/main/default/objects/Contact/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this email been verified?</description>
    <inlineHelpText>Has this email been verified?</inlineHelpText>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>