force-app/main/default/objects/Contact/fields/Email_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_Date__c</fullName>
    <label>Email Verified Date</label>
    <type>DateTime</type>
</CustomField>