force-app/main/default/objects/Contact/fields/Invitation_Code__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Code__c</fullName>
    <description>Code used by a customer to be invited into our platform</description>
    <inlineHelpText>Code used by a customer to be invited into our platform</inlineHelpText>
    <label>Invitation Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>