force-app/main/default/objects/Contact/fields/Inviter_Code__c.field-meta.xml
<CustomField>
    <fullName>Inviter_Code__c</fullName>
    <description>Code used by a customer to invite other customers into our platform</description>
    <inlineHelpText>Code used by a customer to invite other customers into our platform</inlineHelpText>
    <label>Inviter Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>