force-app/main/default/objects/Contact/fields/Inviter_Code_T_C_Date__c.field-meta.xml
<CustomField>
    <fullName>Inviter_Code_T_C_Date__c</fullName>
    <label>Inviter Code T&amp;C Date</label>
    <type>DateTime</type>
</CustomField>