force-app/main/default/objects/Contact/fields/Mobile_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag this field in case the customer does not want to receive phone calls in this number</description>
    <inlineHelpText>Flag this field in case the customer does not want to receive phone calls in this number</inlineHelpText>
    <label>Mobile Opt Out</label>
    <type>Checkbox</type>
</CustomField>