force-app/main/default/objects/Contact/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>weisshausinvestment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>