force-app/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
                <default>true</default>
                <label>German</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>