force-app/main/default/objects/Contact/fields/Preferred_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_Code__c</fullName>
    <formula>TEXT(Preferred_Language__c)</formula>
    <label>Preferred Language Code</label>
    <type>Text</type>
</CustomField>