force-app/main/default/objects/Contact/fields/Product_B__c.field-meta.xml
<CustomField>
    <fullName>Product_B__c</fullName>
    <label>Product B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Subscription_Status</valueSetName>
    </valueSet>
</CustomField>