force-app/main/default/objects/Contact/fields/ProductInterest_Encode__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest_Encode__c</fullName>
    <formula>SUBSTITUTE( TEXT(  ProductInterest__c ) , &apos; &apos;,&apos;+&apos;)</formula>
    <label>ProductInterest_Encode</label>
    <type>Text</type>
</CustomField>