force-app/main/default/objects/Contact/fields/QPLIX_User_ID__c.field-meta.xml
<CustomField>
    <fullName>QPLIX_User_ID__c</fullName>
    <description>QPLIX User ID</description>
    <externalId>true</externalId>
    <inlineHelpText>QPLIX User ID</inlineHelpText>
    <label>QPLIX User ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>