force-app/main/default/objects/Contact/fields/Subscription_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>