force-app/main/default/objects/Contact/recordTypes/WebLeads.recordType-meta.xml
<RecordType>
    <fullName>WebLeads</fullName>
    <active>false</active>
    <label>WebLeads</label>
</RecordType>