force-app/main/default/objects/Contact/listViews/Web_Lead_Queue.listView-meta.xml
<ListView>
    <fullName>Web_Lead_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Web Lead Queue</label>
</ListView>